# orchestra

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md
blackcap/: .env.test  .flake8  .gitignore  README.md  pyproject.toml
blackcap/api/: spec.yml
blackcap/src/blackcap/: __init__.py  db.py  extensions.py  server.py  workers.py
blackcap/src/blackcap/auther/: __init__.py  base.py  cookie_auther.py  registry.py
blackcap/src/blackcap/blocs/: cluster.py  job.py  schedule.py  schedule_update.py  user.py
blackcap/src/blackcap/cli/: create.py  db.py  get.py  main.py  publish.py  schedule.py  subscribe.py
blackcap/src/blackcap/cluster/: __init__.py  base.py  registry.py  slurm_cluster.py
blackcap/src/blackcap/configs/: __init__.py  base.py  default.py  registry.py  testing.py
blackcap/src/blackcap/flow/: __init__.py  executor.py  flow.py  step.py
blackcap/src/blackcap/messenger/: __init__.py  base.py  gcp_messenger.py  nats_messenger.py  registry.py
blackcap/src/blackcap/models/: __init__.py  cluster.py  job.py  protagonist.py  schedule.py
blackcap/src/blackcap/observer/: __init__.py  base.py  elastic_observer.py  registry.py
blackcap/src/blackcap/routes/: __init__.py
blackcap/src/blackcap/scheduler/: __init__.py  base.py  random_scheduler.py  registry.py
blackcap/src/blackcap/schemas/: __init__.py  cluster.py  job.py  message.py  schedule.py
blackcap/src/blackcap/tasks/: __init__.py  pub_messenger.py
blackcap/src/blackcap/utils/: auth.py  cli_commands.py
blackcap/tests/: __init__.py  conftest.py
blackcap/tests/integration/api/: __init__.py  test_user.py
blackcap/tests/integration/blocs/: test_job.py  test_user.py  (+1 more)
docs/: conf.py  index.rst  pyproject.toml
(+222 files in other folders)
