[tool.poetry]
name = "blackcap"
version = "0.21.0"
description = "Shared library for Orchestra"
authors = ["Ankur Kumar <ank@leoank.me>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
psycopg2-binary = "^2.8.6"
logzero = "^1.7.0"
click = "<8.0"
google-cloud-pubsub = "^2.5.0"
xdg = "^5.0.2"
celery = "^5.1.0"
gunicorn = "^20.1.0"
redis = "^3.5.3"
bcrypt = "^3.2.0"
PyJWT = "^2.1.0"
SQLAlchemy = "^1.4.22"
SQLAlchemy-serializer = "^1.4.1"
alembic = "^1.6.5"
nats-python = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"
pytest-cov = "^2.12.0"
flake8 = "^3.9.2"
black = "^21.5b2"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^21.4.3"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
mypy = "^0.812"
flake8-annotations = "^2.6.2"
typeguard = "^2.12.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
pre-commit = "^2.13.0"
nox = "^2020.12.31"
factory-boy = "^3.2.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
blackcap = "blackcap.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
