[tool.poetry]
name = "orchestra-docs"
version = "0.1.0"
description = "Orchestra Documentation"
authors = ["Martin Beracochea <mbc@ebi.ac.uk>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
